Major cleanup: remove cursor/magnetic/tilt conflicts, add shake buttons, pill animation, accessibility (focus, skip-link, reduced-motion), sitemap, robots.txt, preloader 1s

--- a/css/animations.css
+++ b/css/animations.css
@@ -1065,7 +1065,4 @@ html {
     animation: rumSway 0.4s ease-out;
 }
 
-/* Stars in testimonials sparkle */
-.testimonial-stars {
-    animation: oceanSparkle 3s ease-in-out infinite;
-}
+/* Stars in testimonials - static (animation removed for cleaner UX) */
